--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-11 1:52:10 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-19 4:53:03 pm 
+ * @Last Modified time: 2017-12-26 6:11:29 pm 
  */
 /* main section */
 .item-section {
@@ -45,19 +45,20 @@
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: 1.0666666667rem;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  font-size: 13px;
+  font-size: 14px;
   color: #234755;
   /* vertical line */
 }
 [data-dpr="2"] .media .media-item {
-  font-size: 26px;
+  font-size: 28px;
 }
 [data-dpr="3"] .media .media-item {
-  font-size: 39px;
+  font-size: 42px;
 }
 .media .media-item:nth-of-type(1) {
   border-right: 0.0266666667rem solid #d2d2d2;
@@ -71,6 +72,9 @@
 }
 [data-dpr="3"] .media .iconfont {
   font-size: 78px;
+}
+.media .item-figicaption {
+  display: inline-block;
 }
 
 /* purchase-nav */
@@ -163,15 +167,8 @@
   text-align: center;
 }
 .nav-footer .media-item {
+  height: 1.3333333333rem;
   color: #747474;
-}
-.nav-footer .media-item .media-img {
-  min-width: 0.8rem;
-  min-height: 0.6666666667rem;
-  background: url(../images/sprite.png) 0.0933333333rem 0.6666666667rem;
-}
-.nav-footer .media-item:nth-child(2) .media-img {
-  background: url(../images/sprite.png) -0.8533333333rem 0.6666666667rem;
 }
 .nav-footer .view-all {
   display: inline-block;
