--- a/css/index.css
+++ b/css/index.css
@@ -2,58 +2,74 @@
  * @Author: jecyu
  * @Date: 2017-12-22 2:28:04 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-26 2:39:51 pm 
+ * @Last Modified time: 2017-12-27 3:42:13 pm 
  */
 .main {
   width: 10rem;
+  margin: 0;
 }
 
-/* banner */
-.banner {
+/* swiper*/
+.swiper-outer-wrapper {
+  /* fullpage */
+  height: 100%;
+  width: 100%;
+}
+
+.swiper-container {
+  height: 12rem;
+  /* fullpage */
+  height: 100%;
+  width: 100%;
+  margin-bottom: 0.16rem;
+}
+
+.swiper-slide {
+  height: 100%;
+  width: 100%;
+  /* banner */
+}
+.swiper-slide .banner {
   position: relative;
   overflow: hidden;
+  width: inherit;
+  height: inherit;
 }
-.banner .banner-figcaption {
+.swiper-slide .banner .banner-figcaption {
+  z-index: 100;
   position: absolute;
   left: 10%;
   top: 60%;
   font-size: 16px;
   color: white;
 }
-[data-dpr="2"] .banner .banner-figcaption {
+[data-dpr="2"] .swiper-slide .banner .banner-figcaption {
   font-size: 32px;
 }
-[data-dpr="3"] .banner .banner-figcaption {
+[data-dpr="3"] .swiper-slide .banner .banner-figcaption {
   font-size: 48px;
 }
-.banner .banner-figcaption strong {
+.swiper-slide .banner .banner-figcaption strong {
   font-size: 26px;
   font-weight: 400;
 }
-[data-dpr="2"] .banner .banner-figcaption strong {
+[data-dpr="2"] .swiper-slide .banner .banner-figcaption strong {
   font-size: 52px;
 }
-[data-dpr="3"] .banner .banner-figcaption strong {
+[data-dpr="3"] .swiper-slide .banner .banner-figcaption strong {
   font-size: 78px;
 }
-
-/* swiper*/
-.swiper-container {
-  height: 12rem;
+.swiper-slide .banner .baner-figure {
+  position: relative;
   width: 100%;
-  border-bottom: 0.16rem solid #e6e6e6;
+  height: 100%;
 }
-
-.swiper-slide {
-  height: 12rem;
-  width: 10rem;
-}
-.swiper-slide a {
-  width: inherit;
-  height: inherit;
-}
-.swiper-slide a img {
-  width: 100%;
+.swiper-slide .banner img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   height: 100%;
 }
 
@@ -117,11 +133,15 @@
 }
 .product-area-list .product-area-item {
   height: 1.68rem;
-  width: 3.3866666667rem;
+  width: 3.3333333333rem;
   text-align: center;
 }
 .product-area-list .product-area-item + .product-area-item {
   border-left: 0.0133333333rem solid #b2b2b2;
+}
+.product-area-list .product-area-item img {
+  width: 0.8533333333rem;
+  height: 0.8533333333rem;
 }
 
 .area-media {
@@ -140,17 +160,14 @@
 }
 .area-media .media-figure {
   position: absolute;
-  top: 0.4rem;
+  top: 0rem;
   left: 50%;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
 }
-.area-media .media-figure.figure-1 img {
+.area-media .media-figure img {
   margin-top: 0.2666666667rem;
-}
-.area-media .media-figure.figure-3 img {
-  margin-top: 0.1333333333rem;
 }
 
 /* card */
@@ -176,14 +193,14 @@
 }
 .media .media-title {
   position: relative;
-  font-size: 18px;
   margin-bottom: 0.6666666667rem;
+  font-size: 16px;
 }
 [data-dpr="2"] .media .media-title {
-  font-size: 36px;
+  font-size: 32px;
 }
 [data-dpr="3"] .media .media-title {
-  font-size: 54px;
+  font-size: 48px;
 }
 .media .media-title::before {
   position: absolute;
@@ -241,7 +258,8 @@
 }
 .item-section.article .media {
   position: relative;
-  display: block;
+  display: inline-block;
+  width: 4.8rem;
   height: 6.4533333333rem;
   margin: 0.1333333333rem;
 }
@@ -249,6 +267,7 @@
   margin-right: 0;
 }
 .item-section.article .media .media-figure {
+  position: absolute;
   width: 100%;
   height: 100%;
   -webkit-filter: brightness(70%);
@@ -260,11 +279,21 @@
 }
 .item-section.article .media .media-figcaption {
   position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   bottom: 10%;
+  width: 2.6666666667rem;
+  margin: 0;
+  text-align: center;
   color: #b2b2b2;
 }
 .item-section.article .media .media-figcaption .media-title::before {
-  left: 0.6666666667rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 /* LR card */
@@ -278,8 +307,9 @@
   background: #e6e6e6;
 }
 .item-section:nth-child(4) .card {
+  overflow: hidden;
   position: relative;
-  width: 370px;
+  width: 4.9333333333rem;
   height: 100%;
   margin-left: 0.1333333333rem;
   text-align: center;
@@ -288,14 +318,23 @@
 }
 .item-section:nth-child(4) .card .media-figure {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  width: inherit;
-  height: 4.9333333333rem;
+  bottom: -0.1333333333rem;
 }
 .item-section:nth-child(4) .card .media-figure img {
-  width: inherit;
-  height: inherit;
+  width: 3.7333333333rem;
+  height: 4.48rem;
+}
+.item-section:nth-child(4) .card:nth-child(1) .media-figure {
+  position: absolute;
+  left: 40%;
+  -webkit-transform: translateX(-40%);
+      -ms-transform: translateX(-40%);
+          transform: translateX(-40%);
+  right: 0;
+}
+.item-section:nth-child(4) .card:nth-child(2) .media-figure {
+  position: absolute;
+  right: 0;
 }
 .item-section:nth-child(4) .card .media-title {
   z-index: 500;
