--- a/css/personal.css
+++ b/css/personal.css
@@ -40,7 +40,7 @@
   font-size: 54px;
 }
 .banner .banner-title::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -40%;
   left: 50%;
