--- a/css/search.css
+++ b/css/search.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-22 6:28:45 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-23 12:03:44 pm 
+ * @Last Modified time: 2017-12-26 5:16:50 pm 
  */
 .main {
   width: 10rem;
@@ -41,7 +41,7 @@
   font-size: 54px;
 }
 .banner .banner-title::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -40%;
   left: 50%;
@@ -56,7 +56,6 @@
 
 .item-section {
   position: relative;
-  min-height: 100%;
   color: #747474;
   background: #fff;
   border-bottom: 0.16rem solid #e6e6e6;
@@ -104,10 +103,10 @@
   height: 0.6666666667rem;
 }
 .search-wrapper .search-input-container .user-close {
-  width: 1.3333333333rem;
+  width: 0.6666666667rem;
   height: 0.6666666667rem;
   padding-right: 0.1333333333rem;
-  border-right: 3px solid #d2d2d2;
+  border-right: 0.04rem solid #d2d2d2;
   font-size: 16px;
 }
 [data-dpr="2"] .search-wrapper .search-input-container .user-close {
@@ -117,10 +116,10 @@
   font-size: 48px;
 }
 .search-wrapper .search-input-container .user-input {
-  width: 4.9333333333rem;
+  width: 5.3333333333rem;
   height: 0.6666666667rem;
   border: none;
-  margin: 0 0 0 50px;
+  padding: 0 0.2666666667rem;
   font-size: 16px;
   color: #747474;
 }
@@ -131,30 +130,32 @@
   font-size: 48px;
 }
 .search-wrapper .search-input-container .user-search {
+  position: absolute;
+  right: 0.5333333333rem;
   width: 0.6666666667rem;
   height: 0.6666666667rem;
-  padding-right: 8rem;
 }
 .search-wrapper .view-all {
   position: absolute;
-  top: 2.4rem;
-  right: 1.3333333333rem;
+  top: 2.5333333333rem;
+  right: 1.4666666667rem;
 }
 .search-wrapper .view-all a {
-  font-size: 12px;
+  font-size: 14px;
   color: #747474;
 }
 [data-dpr="2"] .search-wrapper .view-all a {
-  font-size: 24px;
+  font-size: 28px;
 }
 [data-dpr="3"] .search-wrapper .view-all a {
-  font-size: 36px;
+  font-size: 42px;
 }
 
 .footer-background {
   width: 100%;
-  height: 15.44rem;
-  background: url("../images/search-content.png") no-repeat 0 1.3333333333rem;
+  height: 8rem;
+  background: url("../images/search-content-1.jpg") no-repeat;
+  background-size: contain;
 }
 
 input::-webkit-input-placeholder {
