--- a/css/article.css
+++ b/css/article.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-23 4:02:46 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-23 4:58:26 pm 
+ * @Last Modified time: 2017-12-29 5:12:37 pm 
  */
 .main {
   width: 10rem;
@@ -60,7 +60,7 @@
 .f-content {
   width: 100%;
   height: 14px;
-  background: #F0F0F0;
+  background: #f0f0f0;
 }
 
 .content-1 {
