--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-22 2:28:04 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-27 3:42:13 pm 
+ * @Last Modified time: 2017-12-29 5:16:01 pm 
  */
 .main {
   width: 10rem;
@@ -30,8 +30,8 @@
   /* banner */
 }
 .swiper-slide .banner {
-  position: relative;
   overflow: hidden;
+  position: relative;
   width: inherit;
   height: inherit;
 }
@@ -58,11 +58,6 @@
 }
 [data-dpr="3"] .swiper-slide .banner .banner-figcaption strong {
   font-size: 78px;
-}
-.swiper-slide .banner .baner-figure {
-  position: relative;
-  width: 100%;
-  height: 100%;
 }
 .swiper-slide .banner img {
   position: absolute;
@@ -100,11 +95,11 @@
   min-height: 100%;
   border-bottom: 0.16rem solid #e6e6e6;
   color: #747474;
-  background-color: #fff;
+  background: #fff;
 }
 
 /* product area */
-.product-area {
+.item-section.product-area {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -127,6 +122,15 @@
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: 0.16rem;
+  font-size: 12px;
+  background: #fff;
+}
+[data-dpr="2"] .product-area-list {
+  font-size: 24px;
+}
+[data-dpr="3"] .product-area-list {
+  font-size: 36px;
 }
 .product-area-list::after, .product-area-list::before {
   content: "";
@@ -137,7 +141,7 @@
   text-align: center;
 }
 .product-area-list .product-area-item + .product-area-item {
-  border-left: 0.0133333333rem solid #b2b2b2;
+  border-left: 0.04rem solid #b2b2b2;
 }
 .product-area-list .product-area-item img {
   width: 0.8533333333rem;
