--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-11 1:52:10 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-26 6:11:29 pm 
+ * @Last Modified time: 2017-12-29 5:23:11 pm 
  */
 /* main section */
 .item-section {
@@ -20,8 +20,11 @@
   -webkit-justify-content: space-around;
       -ms-flex-pack: distribute;
           justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 2.8266666667rem;
-  padding: 0.9333333333rem 0;
 }
 .media a {
   color: #234755;
@@ -45,7 +48,7 @@
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 1.0666666667rem;
+  height: 1.3333333333rem;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
@@ -61,7 +64,7 @@
   font-size: 42px;
 }
 .media .media-item:nth-of-type(1) {
-  border-right: 0.0266666667rem solid #d2d2d2;
+  border-right: 0.04rem solid #d2d2d2;
 }
 .media .iconfont {
   font-size: 26px;
@@ -112,7 +115,10 @@
   font-size: 48px;
 }
 .purchase-nav .nav-list .nav-item {
-  border-bottom: 0.0133333333rem solid #747474;
+  border: 0 solid #747474;
+  border-bottom: 0.04rem solid #747474;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .fold-header {
@@ -166,15 +172,24 @@
 .nav-footer {
   text-align: center;
 }
+.nav-footer .media.other-link {
+  height: 2.6666666667rem;
+}
 .nav-footer .media-item {
+  width: 100%;
+  height: 100%;
   height: 1.3333333333rem;
   color: #747474;
+}
+.nav-footer .media-item .media-img {
+  width: 1.0666666667rem;
+  height: 1.3333333333rem;
 }
 .nav-footer .view-all {
   display: inline-block;
   height: 1.0666666667rem;
   width: 6.4rem;
-  border: 0.0133333333rem solid #747474;
+  border: 0.04rem solid #747474;
   text-align: center;
   line-height: 1.0666666667rem;
   color: #747474;
