--- a/css/product.css
+++ b/css/product.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-23 5:07:29 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-26 10:16:48 am 
+ * @Last Modified time: 2017-12-29 5:07:48 pm 
  */
 .main {
   width: 10rem;
@@ -93,21 +93,33 @@
 }
 
 .middle-content-2 p:nth-child(2) {
-  font-size: 32px;
+  font-size: 16px;
   color: #747474;
   margin: 0px 0 10px 0;
 }
+[data-dpr="2"] .middle-content-2 p:nth-child(2) {
+  font-size: 32px;
+}
+[data-dpr="3"] .middle-content-2 p:nth-child(2) {
+  font-size: 48px;
+}
 
 .middle-content-2 p:nth-child(3) {
-  font-size: 30px;
+  font-size: 16px;
   color: #747474;
-  margin: 0px 0 10px 0;
+  margin: 0rem 0 0.1333333333rem 0;
+}
+[data-dpr="2"] .middle-content-2 p:nth-child(3) {
+  font-size: 32px;
+}
+[data-dpr="3"] .middle-content-2 p:nth-child(3) {
+  font-size: 48px;
 }
 
 .middle-content-2 p:nth-child(4) {
   font-size: 14px;
   color: #234755;
-  margin-top: 50px;
+  margin-top: 0.6666666667rem;
 }
 [data-dpr="2"] .middle-content-2 p:nth-child(4) {
   font-size: 28px;
@@ -117,19 +129,31 @@
 }
 
 .middle-content-2 span:nth-child(1) {
+  font-size: 16px;
+}
+[data-dpr="2"] .middle-content-2 span:nth-child(1) {
   font-size: 32px;
+}
+[data-dpr="3"] .middle-content-2 span:nth-child(1) {
+  font-size: 48px;
 }
 
 .middle-content-2 span:nth-child(2) {
   color: red;
-  font-size: 30px;
+  font-size: 16px;
+}
+[data-dpr="2"] .middle-content-2 span:nth-child(2) {
+  font-size: 32px;
+}
+[data-dpr="3"] .middle-content-2 span:nth-child(2) {
+  font-size: 48px;
 }
 
 .middle-content-3 {
   height: 6.6666666667rem;
   width: 8.6666666667rem;
-  border-top: 0.0133333333rem solid #747474;
-  border-bottom: 0.0133333333rem solid #747474;
+  border-top: 0.04rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
   margin: 0 auto;
 }
 
@@ -143,12 +167,12 @@
 }
 
 .middle-content-3 div:nth-child(1) {
-  border-bottom: 0.0133333333rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
 }
 .middle-content-3 div:nth-child(1) div:nth-child(1) {
   height: inherit;
   width: 2.8rem;
-  border-right: 0.0133333333rem solid #747474;
+  border-right: 0.04rem solid #747474;
 }
 .middle-content-3 div:nth-child(1) div:nth-child(2) {
   height: inherit;
@@ -156,12 +180,12 @@
 }
 
 .middle-content-3 div:nth-child(2) {
-  border-bottom: 0.0133333333rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
 }
 .middle-content-3 div:nth-child(2) div:nth-child(1) {
   height: inherit;
   width: 2.8rem;
-  border-right: 0.0133333333rem solid #747474;
+  border-right: 0.04rem solid #747474;
 }
 .middle-content-3 div:nth-child(2) div:nth-child(2) {
   height: inherit;
@@ -169,12 +193,12 @@
 }
 
 .middle-content-3 div:nth-child(3) {
-  border-bottom: 0.0133333333rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
 }
 .middle-content-3 div:nth-child(3) div:nth-child(1) {
   height: inherit;
   width: 2.8rem;
-  border-right: 0.0133333333rem solid #747474;
+  border-right: 0.04rem solid #747474;
 }
 .middle-content-3 div:nth-child(3) div:nth-child(2) {
   height: inherit;
@@ -204,7 +228,7 @@
   display: inline-block;
   height: 1.0666666667rem;
   width: 4.2666666667rem;
-  border: 0.0266666667rem solid #234755;
+  border: 0.04rem solid #234755;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: center;
@@ -241,7 +265,7 @@
   font-size: 14px;
   color: #747474;
   text-align: justify;
-  border-bottom: 0.0133333333rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
 }
 [data-dpr="2"] .middle-content-5 {
   font-size: 28px;
@@ -259,7 +283,7 @@
   width: 8.6666666667rem;
   margin: 0 auto;
   margin-top: 0.6666666667rem;
-  border-bottom: 0.0133333333rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
   font-size: 14px;
   color: #747474;
   text-align: justify;
@@ -282,7 +306,7 @@
   font-size: 14px;
   color: #747474;
   text-align: justify;
-  border-bottom: 0.0133333333rem solid #747474;
+  border-bottom: 0.04rem solid #747474;
   margin-top: 50px;
 }
 [data-dpr="2"] .middle-content-7 {
@@ -351,7 +375,7 @@
 
 .nessary-item:not(:last-child) {
   padding: 0.56rem 0;
-  border-bottom: 0.0133333333rem solid #b4b4b4;
+  border-bottom: 0.04rem solid #b4b4b4;
 }
 .nessary-item:last-child {
   padding-top: 0.56rem;
