--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
  * @Author: jecyu
  * @Date: 2017-12-22 2:28:04 pm 
  * @Modified By: jeCyu 
- * @Last Modified time: 2017-12-29 5:16:01 pm 
+ * @Last Modified time: 2018-01-05 7:28:06 pm 
  */
 .main {
   width: 10rem;
@@ -34,6 +34,11 @@
   position: relative;
   width: inherit;
   height: inherit;
+  /*  .baner-figure {
+      position: relative;
+      width: 100%;
+      height: 100%;
+  } */
 }
 .swiper-slide .banner .banner-figcaption {
   z-index: 100;
@@ -91,7 +96,7 @@
 
 /* main section */
 .item-section {
-  position: relative;
+  position: relati ve;
   min-height: 100%;
   border-bottom: 0.16rem solid #e6e6e6;
   color: #747474;
@@ -100,78 +105,72 @@
 
 /* product area */
 .item-section.product-area {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  width: 10rem;
   height: 3.2rem;
+  padding: 0.4rem 0;
   color: #7b7b7b;
 }
 
-.product-area-list {
-  height: 1.68rem;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 0.16rem;
-  font-size: 12px;
-  background: #fff;
+.swiper-container-2 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  /* border */
 }
-[data-dpr="2"] .product-area-list {
-  font-size: 24px;
-}
-[data-dpr="3"] .product-area-list {
-  font-size: 36px;
-}
-.product-area-list::after, .product-area-list::before {
-  content: "";
-}
-.product-area-list .product-area-item {
-  height: 1.68rem;
-  width: 3.3333333333rem;
+.swiper-container-2 .swiper-slide {
   text-align: center;
 }
-.product-area-list .product-area-item + .product-area-item {
-  border-left: 0.04rem solid #b2b2b2;
+.swiper-container-2::before, .swiper-container-2::after {
+  position: absolute;
+  content: "";
+  width: 0.04rem;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
 }
-.product-area-list .product-area-item img {
-  width: 0.8533333333rem;
-  height: 0.8533333333rem;
+.swiper-container-2::before {
+  top: 0;
+  left: calc(100%/3);
+}
+.swiper-container-2::after {
+  top: 0;
+  right: calc(100%/3);
 }
 
-.area-media {
-  position: relative;
+.area-item {
   overflow: hidden;
+  position: relative;
   height: inherit;
   width: inherit;
 }
-.area-media .media-figcaption {
+.area-item .item-figcaption {
+  font-size: 12px;
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
-  bottom: 0rem;
+  bottom: 0.2666666667rem;
 }
-.area-media .media-figure {
+[data-dpr="2"] .area-item .item-figcaption {
+  font-size: 24px;
+}
+[data-dpr="3"] .area-item .item-figcaption {
+  font-size: 36px;
+}
+.area-item .item-figure {
   position: absolute;
-  top: 0rem;
+  top: 0.1333333333rem;
   left: 50%;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
 }
-.area-media .media-figure img {
-  margin-top: 0.2666666667rem;
+.area-item .item-figure img {
+  width: 0.8rem;
+}
+.area-item .item-figure.small img {
+  width: 1.4666666667rem;
 }
 
 /* card */
